--- a/frontend/src/Components/navbar/Navbar.css
+++ b/frontend/src/Components/navbar/Navbar.css
@@ -20,12 +20,15 @@
     justify-content: center;
 }
 .logo>p:first-child{
-    font-size: 30px;
+    font-size: 25px;
     color: teal;
     cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .logo>p:last-child{
-    font-size: 24px;
+    font-size: 20px;
     font-weight: 600;
     color: teal;
     letter-spacing: 3px;
