--- a/frontend/src/Pages/Dealers/CarCard.css
+++ b/frontend/src/Pages/Dealers/CarCard.css
@@ -1,4 +1,4 @@
-.inventory-card{
+.car-card{
     width: 300px;
     height: 300px;
     display: flex;
@@ -10,10 +10,10 @@
    box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
 
 }
-.inventory-card:hover{
+.car-card:hover{
     box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
 }
-.inventory-image{
+.car-image{
     width: 98%;
     height: 50%;
     margin: auto;
@@ -21,11 +21,11 @@
     align-items: center;
     justify-content: center;
 }
-.inventory-image img{
+.car-image img{
     width: 100%;
     height:100%;
 }
-.inventory-details{
+.car-details{
     width: 100%;
     height: 45%;
     display: flex;
@@ -33,12 +33,12 @@
     align-items: center;
     justify-content: space-around;
 }
-.inventory-details>p{
+.car-details>p{
      font-weight: 600;
      font-size: 18px;
      color: black;
 }
-.inventory-details div{
+.car-details>p+div{
     height: 40%;
     display: flex;
     flex-direction: column;
@@ -46,8 +46,14 @@
     justify-content: space-around;
     gap: 10px;
 }
-.inventory-details div p{
+.car-details>p+div p{
     font-size: 16px;
     color: black;
 
+}
+.car-edit{
+    width: 100%;
+    color: teal;
+  display: flex;
+  font-size: 20px;
 }
